tests/specs/permission/write_allow_binary/main.out
Running...
error: Uncaught (in promise) PermissionDenied: Requires write access to "binary", run again with the --allow-write flag
Deno.writeTextFileSync(binaryName, "");
     ^
    at [WILDCARD]
    at file:///[WILDLINE]sub.ts:3:6
